add .miecraft formatting